# audiomock

./: Cargo.toml  LICENSE  README.md  config.example.toml
crates/audiomock/: Cargo.toml
crates/audiomock-integration/: Cargo.toml
crates/audiomock-integration/src/: integration.rs  lib.rs
crates/audiomock-proto/: Cargo.toml
crates/audiomock-proto/src/: audio.rs  config.rs  device.rs  lib.rs  protocol.rs
crates/audiomock/src/: client.rs  main.rs
crates/audiomock/src/commands/: devices.rs  generate.rs  link.rs  mod.rs  play.rs  record.rs  status.rs  stop.rs  stream.rs
crates/audiomockd/: Cargo.toml
crates/audiomockd/src/: daemon.rs  main.rs
crates/audiomockd/src/audio/: decoder.rs  encoder.rs  generator.rs  mod.rs  ring_buffer.rs
crates/audiomockd/src/ipc/: handler.rs  mod.rs  server.rs  stream_bridge.rs
crates/audiomockd/src/pipewire/: context.rs  format.rs  mod.rs  virtual_node.rs
scripts/: audiomockd.service  install.sh  setup.sh  uninstall.sh
