[package]
name = "audiomockd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "audiomockd"
path = "src/main.rs"

[dependencies]
audiomock-proto = { path = "../audiomock-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = "0.5"
pipewire = "0.8"
libspa = "0.8"
gstreamer = "0.23"
gstreamer-audio = "0.23"
gstreamer-app = "0.23"
